Fixed the spacing issue of TermsAndPrivacy component

--- a/src/components/About/TermsAndPrivacy/TermsAndPrivacy.css
+++ b/src/components/About/TermsAndPrivacy/TermsAndPrivacy.css
@@ -1,12 +1,12 @@
 #terms-and-privacy-document {    
-    padding: 6.25rem 15% 0 15%;
+    padding: 5rem 15% 0 15%;
 }
 
 #terms-and-privacy-document h5 {
     font-size: 1.8rem;
     font-weight: 500;
     color: #642F21;
-    padding: 1.5% 0;
+    margin-bottom: 0;
 }
 
 #terms-and-privacy-document p {
